--- a/components.json
+++ b/components.json
@@ -13,7 +13,9 @@
   "aliases": {
     "@": "src",
     "@components": "src/shared/ui",
+    "components": "src/shared/ui",
     "@utils": "src/shared/utils",
+    "utils": "src/shared/utils",
     "@ui": "src/shared/ui",
     "@lib": "src/shared/lib",
     "@hooks": "src/shared/hooks",
