--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,7 +9,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["./src/shared/ui/*"],
+      "@components/*": ["./src/shared/ui/components/*"],
       "@utils/*": ["./src/shared/utils/*"],
       "@ui/*": ["./src/shared/ui/*"],
       "@lib/*": ["./src/shared/lib/*"],
