--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@components/*": ["src/shared/ui/*"],
+      "@components/*": ["src/shared/ui/components/*"],
       "@utils/*": ["src/shared/utils/*"],
       "@ui/*": ["src/shared/ui/*"],
       "@lib/*": ["src/shared/lib/*"],
