--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-menubar": "^1.1.12",
     "@radix-ui/react-navigation-menu": "^1.2.10",
     "@radix-ui/react-slider": "^1.3.4",
